Add autocomplete input for selecting icons on the editor

--- a/index.html
+++ b/index.html
@@ -676,6 +676,8 @@
       </paper-header-panel>
     </paper-drawer-panel>
 
+    <iron-meta type="iconset" list="{{iconsets}}"></iron-meta>
+
     <firebase-auth
       id="firebaseAuth"
       location="https://polytipe.firebaseio.com"
