--- a/styles.html
+++ b/styles.html
@@ -84,6 +84,11 @@
 		--paper-input-container-focus-color: var(--polytipe-accent-color);
 	}
 
+  .sidebar_panel paper-autocomplete{
+    --paper-input-container-input-color: white;
+		--paper-input-container-focus-color: var(--polytipe-accent-color);
+	}
+
   .sidebar_panel paper-textarea{
     --paper-input-container-input-color: white;
     --paper-input-container-focus-color: var(--polytipe-accent-color);
