--- a/app/index.html
+++ b/app/index.html
@@ -101,10 +101,12 @@
                 <div>Ir a Github</div>
             </paper-item>
           </a>
-          <paper-item>
-            <iron-icon class="left_toolbar_icon element_icon" icon="polytipe-icons:icon"></iron-icon>
-            <div>Acerca de Polytipe</div>
-          </paper-item>
+          <a class="link" tabindex="-1" href="../">
+            <paper-item>
+              <iron-icon class="left_toolbar_icon element_icon" icon="polytipe-icons:icon"></iron-icon>
+              <div>Acerca de Polytipe</div>
+            </paper-item>
+          </a>
           <paper-item onclick="sign_out()">
             <iron-icon class="left_toolbar_icon element_icon" icon="exit-to-app"></iron-icon>
             <div>Cerrar sesión</div>
