--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 Métricas avanzadas <br/>
                 Soporte básico 24/7
               </div>
-              <paper-button class="plan_button paper-font-button" onclick="startPlan()">Empezar</paper-button>
+              <paper-button disabled class="plan_button paper-font-button">Empezar</paper-button>
             </paper-material>
             <paper-material class="plan_box layout vertical center" elevation="1">
               <div class="plan_title">Empresarial</div>
@@ -279,7 +279,7 @@
                 Métricas avanzadas <br/>
                 Soporte avanzado 24/7
               </div>
-              <paper-button class="plan_button paper-font-button" onclick="startPlan()">Empezar</paper-button>
+              <paper-button disabled class="plan_button paper-font-button">Empezar</paper-button>
             </paper-material>
           </div>
 
@@ -310,7 +310,6 @@
         </section>
       </paper-header-panel>
     </paper-drawer-panel>
-    <paper-toast id="plan_toast" duration="5000" text="Este plan no está disponible aún. Gracias por tu interés."></paper-toast>
     <paper-toast id="mail_sent_toast" duration="3000" text="Mensaje enviado"></paper-toast>
   </template>
 
