Add poly-input / Style fixes for poly-tabs

--- a/app/elements.html
+++ b/app/elements.html
@@ -84,6 +84,7 @@
 <link rel="import" href="bower_components/poly-elements/poly-label.html">
 <link rel="import" href="bower_components/poly-elements/poly-paragraph.html">
 <link rel="import" href="bower_components/poly-elements/poly-icon-button.html">
+<link rel="import" href="bower_components/poly-elements/poly-input.html">
 
 <link rel="import" href="bower_components/poly-layout/poly-layout.html">
 <link rel="import" href="bower_components/poly-layout/layout-dropdown.html">
