--- a/app/index.html
+++ b/app/index.html
@@ -513,6 +513,7 @@
                         <polytipe-item icon="check-box" onclick="makeElement('poly-checkbox')">Checkbox</polytipe-item>
                         <polytipe-item icon="add-circle" onclick="makeElement('poly-fab')">Floating Action Button</polytipe-item>
                         <polytipe-item icon="favorite" onclick="makeElement('poly-icon-button')">Icon</polytipe-item>
+                        <polytipe-item icon="editor:format-italic" onclick="makeElement('poly-input')">Input</polytipe-item>
                         <polytipe-item icon="label-outline" onclick="makeElement('poly-label')">Label</polytipe-item>
                         <polytipe-item icon="subject" onclick="makeElement('poly-paragraph')">Paragraph</polytipe-item>
                         <polytipe-item icon="dashboard" onclick="makeElement('poly-layout')">Layout</polytipe-item>
