Add poly-textarea / Fix poly-input

--- a/app/index.html
+++ b/app/index.html
@@ -518,6 +518,7 @@
                         <polytipe-item icon="subject" onclick="makeElement('poly-paragraph')">Paragraph</polytipe-item>
                         <polytipe-item icon="dashboard" onclick="makeElement('poly-layout')">Layout</polytipe-item>
                         <polytipe-item icon="tab" onclick="makeElement('poly-tabs')">Tabs</polytipe-item>
+                        <polytipe-item icon="editor:format-shapes" onclick="makeElement('poly-textarea')">Text Area</polytipe-item>
                         <polytipe-item icon="av:web-asset" onclick="makeElement('poly-toolbar')">Toolbar</polytipe-item>
                       </paper-menu>
                     </section>
