--- a/app/styles.html
+++ b/app/styles.html
@@ -847,8 +847,42 @@
     margin: 0;
   }
   google-analytics-view-selector {
-    display: none;
+    box-shadow: 0 0 .5em rgba(0,0,0,.1);
+    border-radius: 2px;
+    background: #fff;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin: 0 0 2em 0;
+    padding: 2em .5em 1em 2em;
   }
+
+  google-analytics-view-selector {
+    max-width: 425px;
+  }
+
+  google-analytics-view-selector {
+    --google-analytics-view-selector-control:
+        var(--google-analytics-control);
+    --google-analytics-view-selector-label:
+        var(--google-analytics-label);
+    --google-analytics-view-selector-select:
+        var(--google-analytics-field);
+    --google-analytics-view-selector-select-focus:
+        var(--google-analytics-field-focus);
+  }
+  google-analytics-view-selector,
+    google-analytics-date-selector {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+    }
   google-signin{
     margin-right: 12px;
   }
