Add a surprise for the final presentation

--- a/app/elements.html
+++ b/app/elements.html
@@ -74,6 +74,9 @@
 <link rel="import" href="bower_components/clipboard-input/clipboard-input.html">
 <link rel="import" href="bower_components/paper-autocomplete/paper-autocomplete.html">
 
+<!-- Easter egg -->
+<link rel="import" href="bower_components/emoji-rain/emoji-rain.html">
+
 <!-- poly-elements -->
 <link rel="import" href="bower_components/poly-elements/poly-tabs.html">
 <link rel="import" href="bower_components/poly-elements/poly-button.html">
