--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <link rel="import" href="app/elements.html">
   <link rel="import" href="styles.html">
   <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-
+  <script src="konami.js"></script>
 </head>
 
 <body class="fullbleed">
@@ -311,6 +311,7 @@
       </paper-header-panel>
     </paper-drawer-panel>
     <paper-toast id="mail_sent_toast" duration="3000" text="Mensaje enviado"></paper-toast>
+    <emoji-rain active use-twemoji></emoji-rain>
   </template>
 
   <script src="app.js"></script>
