--- a/styles.html
+++ b/styles.html
@@ -332,6 +332,11 @@
 
   paper-spinner-lite{
     --paper-spinner-color: #999;
+  }  
+
+  emoji-rain{
+    display: none;
+    z-index: 2;
   }
 
   @media (max-width: 1200px) {
