Revert use of vulcanize due to a paper-dialog bug

--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
     ga('send', 'pageview');
   </script>
 
-  <link rel="import" href="elements.vulcanized.html">
+  <link rel="import" href="elements.html">
   <link rel="import" href="styles.html">
   <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
 </head>
