--- a/app/styles.html
+++ b/app/styles.html
@@ -282,6 +282,10 @@
     width: 35px;
     height: 35px;
     margin-right: 2px;
+    --paper-fab-iron-icon:{
+      min-width: 24px;
+      min-height: 24px;
+    }
   }
   #delete_button{
     background-color: var(--app-accent-color);
@@ -289,6 +293,10 @@
     width: 35px;
     height: 35px;
     margin-left: 10px;
+    --paper-fab-iron-icon:{
+      min-width: 24px;
+      min-height: 24px;
+    }
   }
 
   /*Screen editor*/
