--- a/styles.html
+++ b/styles.html
@@ -256,6 +256,10 @@
     width: 150px;
     transition: all 0.3s;
   }
+  #free_button{
+    background-color: var(--polytipe-accent-color);
+    color: white;
+  }
   .plan_button:hover{
     background-color: var(--polytipe-accent-color);
     color: #fff;
